# diviner

./: CHANGELOG.md  README.md  cabal.project  diviner.cabal
src/: Diviner.hs
test/: Main.hs
