cabal-version: 2.2
name: diviner
version: 0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file: LICENSE
author: Andrew Martin
maintainer: andrew.thaddeus@gmail.com
copyright: 2020 Layer 3 Communications
category: Data
build-type: Simple
extra-source-files: CHANGELOG.md

library
  exposed-modules: Diviner
  build-depends:
    , base >=4.12 && <5
    , byteslice >=0.2.1
    , bytesmith >=0.3.6
    , ip >=1.7.1
  hs-source-dirs: src
  ghc-options: -Wall -O2
  default-language: Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    , base
    , diviner
    , byteslice
    , primitive
  ghc-options: -Wall -O2
  default-language: Haskell2010
